--- a/styleOthers/equipe.css
+++ b/styleOthers/equipe.css
@@ -1,45 +1,5 @@
-img {
-    border-radius: 10px;
-}
-
-.containerFounder {
-    padding-top: 100px;
-}
-
-.containerFounder h2 {
-    font-size : 3em;
-    color: goldenrod;
-    font-weight: bold;
-    text-align: center;
-}
-
-.containerFounder div {
-    padding-top: 20px;
-}
-
-.containerFounder p {
-    font-size : 20px;
-    margin-top: 50px;
-}
-
-.containerFounder span {
-    color: goldenrod;
-    font-size:1.5em;
-}
-
-.containerFounder i {
-    line-height: 20px;
-    background-color: goldenrod;
-    border-radius: 10px
-}
-
 .containerTeam {
-    padding-top: 100px;
-}
-
-.containerTeam h3 {
-    color: goldenrod;
-    text-align: center;
+    padding-top: 50px;
 }
 
 .containerTeam .thumbnail {
@@ -49,7 +9,6 @@ img {
 .containerTeam i {
     margin-top: 5px;
     line-height: 20px;
-    font-weight: bold;
 }
 
 .containerTeam p {
@@ -58,5 +17,10 @@ img {
 
 .containerTeam img {
     padding-top: 10px;
+}
+
+.Jobs {
+    color: grey;
+    font-weight: bold;
 }
 
