--- a/scss/style.scss
+++ b/scss/style.scss
@@ -140,6 +140,7 @@ p
 .containerFAQ  {
   min-height: 100vh;
   padding-top: 60px;
+  text-align: justify;
   h1 {
     text-align: justify;
     color: $mainColor;
